# persephone

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  XML_BUILDER_README.md  pyproject.toml  requirements.txt  xml_builder_example.py
.github/workflows/: ci.yml
resources/icon/: README.md
scripts/: verify_dev_env.py
src/persephone/: __init__.py  __main__.py  xml_builder.py
tests/: conftest.py  test_persephone.py  test_xml_builder.py
