[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persephone"
description = "Cross-platform GUI application"
version = "0.1.0"
authors = [
    {name = "Persephone Team"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
gui = [
    "toga>=0.4.0",
    "briefcase>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
full = [
    "persephone[gui,dev]"
]

[project.urls]
Repository = "https://github.com/Hanz98/persephone"

[tool.briefcase]
project_name = "Persephone"
bundle = "com.persephone"
version = "0.1.0"
url = "https://github.com/Hanz98/persephone"
author = "Persephone Team"
author_email = "team@persephone.dev"

[tool.briefcase.app.persephone]
formal_name = "Persephone"
description = "Cross-platform GUI application"
long_description = "Persephone is a cross-platform GUI application built with Python and the Toga framework. It provides a simple and intuitive interface that runs natively on Windows, Linux, macOS, Android, and iOS. The application demonstrates modern Python development practices with comprehensive testing, CI/CD pipeline, and code quality tools."
icon = "resources/icon"
sources = ["src/persephone"]
requires = []

[tool.briefcase.app.persephone.macOS]
requires = []

[tool.briefcase.app.persephone.linux]
requires = []
system_requires = []

[tool.briefcase.app.persephone.windows]
requires = []

[tool.briefcase.app.persephone.android]
requires = []

[tool.briefcase.app.persephone.iOS]
requires = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/persephone --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88